tests/statics/statics.exp
Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
       ^ property `g`. Property not found in
  6: C.g = function(x:string) { C.f(x); };
     ^ statics of `C`

Error: class_statics.js:6
  6: C.g = function(x:string) { C.f(x); };
                                    ^ string. This type is incompatible with the expected param type of
  2:   static f(x:number) { }
                  ^^^^^^ number

Error: class_statics.js:7
  7: C.g(0);
         ^ number. This type is incompatible with the expected param type of
  6: C.g = function(x:string) { C.f(x); };
                      ^^^^^^ string

Error: class_statics.js:9
  9: var x:number = C.x;
                    ^^^ string. This type is incompatible with
  9: var x:number = C.x;
           ^^^^^^ number

Error: class_statics.js:11
 11: C.x = 0;
           ^ number. This type is incompatible with
 11: C.x = 0;
     ^^^ string

Error: funstatics.js:5
  5: var x:string = new C().f();
                    ^^^^^^^^^^^ number. This type is incompatible with
  5: var x:string = new C().f();
           ^^^^^^ string


Found 6 errors
